crates/huak-cli/tests/snapshots/r#mod__tests__remove_help.snap
---
source: crates/huak_cli/tests/mod.rs
info:
  program: huak
  args:
    - remove
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Remove dependencies from the project

Usage: huak remove [OPTIONS] <DEPENDENCIES>... [-- <TRAILING>...]

Arguments:
  <DEPENDENCIES>...  
  [TRAILING]...      Pass trailing arguments with `--`

Options:
  -q, --quiet     
      --no-color  
  -h, --help      Print help

----- stderr -----

