crates/huak-cli/tests/snapshots/r#mod__tests__run_help.snap
---
source: crates/huak_cli/tests/mod.rs
info:
  program: huak
  args:
    - run
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Run a command with Huak

Usage: huak run [OPTIONS] [COMMAND]...

Arguments:
  [COMMAND]...  

Options:
  -q, --quiet     
      --no-color  
  -h, --help      Print help

----- stderr -----

