crates/huak-cli/tests/snapshots/r#mod__tests__version_help.snap
---
source: crates/huak_cli/tests/mod.rs
info:
  program: huak
  args:
    - version
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Display the version of the project

Usage: huak version [OPTIONS]

Options:
  -q, --quiet     
      --no-color  
  -h, --help      Print help

----- stderr -----

